--- a/src/view/main/index.pug
+++ b/src/view/main/index.pug
@@ -2,7 +2,7 @@ extends ./../layout/main
 
 block content
     div.col-xs-12.col-md-12
-        h1 Hello #{user.name} Express.js + Passport.js
+        h1 Hello, #{user.name}!
     div(class="col-xs-12 col-md-12")
         if (user)
             a(href="/auth/logout") Logout
